fixed wedding page spacing to fit in one page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,7 @@
 
 #wedding {
   margin: 0;
+  padding-top: 1.5em;
 }
 
 #wedding:before {
@@ -316,7 +317,7 @@
 			padding: 1.75em 1.75em 0.1em 1.75em ;
 			background-color: #353849;
 			border-radius: 5px;
-			margin: 1.5em 3em 1.5em 0;
+			margin: 0em 3em 1.5em 0;
 			width: calc(50% - 1.5em);
 		}
 
@@ -381,7 +382,7 @@
 
 /* Headers */
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			padding-bottom: 1em;
+			padding-bottom: 0.5em;
 			border-bottom: solid 2px rgba(255, 255, 255, 0.125);
 		}
 
